added the client section

--- a/index.html
+++ b/index.html
@@ -40,11 +40,18 @@
             <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
               <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
             </div>
+            <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52  gap-4">
+              <a href="">Home</a>
+              <a href="">Services</a>
+              <a href="">Cases</a>
+              <a href="">Blog</a>
+              <a href="">Contact us</a>
+            </ul>
           
           </div>
           <a class="text-4xl font-extrabold">Justic</a>
         </div>
-        <div class="navbar-center lg:flex">
+        <div class="navbar-center hidden lg:flex">
           <ul class="menu menu-horizontal px-1 gap-10">
           <a href="">Home</a>
           <a href="">Services</a>
@@ -59,16 +66,16 @@
       </div>
 
       <!-- legal solution section -->
-      <div class="min-h-screen rounded-xl mt-12" style="background-image: url(./images/banner.png);">
+      <div class="min-h-screen rounded-xl mt-12 bg-no-repeat" style="background-image: url(./images/banner.png);">
         <div class="hero-overlay bg-opacity-60"></div>
         <div class="hero-content text-center text-neutral-content">
           <div class="mt-32">
-            <h1 class="mb-5 text-5xl font-bold">We Provide Effective <br>
+            <h1 class="mb-5 text-3xl font-bold lg:text-5xl font-bold">We Provide Effective <br>
                Legal Solutions</h1>
-            <p class="mb-5 px-52">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+            <p class="lg:mb-5 px-4 lg:px-52">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
 
-         <div class="space-x-6">
-          <input class="w-96 h-12 rounded-xl text-center" type="text" placeholder="Search your services">
+         <div class="space-x-6 pt-6">
+          <input class="lg:w-96 h-12 rounded-xl text-center" type="text" placeholder="Search your services">
           <button class="btn text-white bg-[#B68C5A]">Search</button>
          </div>
 
@@ -80,51 +87,51 @@
     <!-- main section -->
     <main class="max-w-5xl mx-auto">
       <!-- practic area -->
-      <div class="mt-28 text-center">
+      <div class="mt-4 lg:mt-28 text-center">
         <h2 class="text-4xl font-extrabold  pb-6">The Legal Practice Area</h2>
-        <p class="text-xl font-normal items-center w-[1000px] pl-40">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+        <p class="text-xl font-normal items-center w-[350px] lg:w-[1000px] lg:pl-40">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
       </div>
 
-<section class=" mt-16">
-  <div class="flex">
-    <div class="border-r-2 border-zinc-500 border-opacity-20 border-b-2  justify-center items-center p-12">
-      <img class="pb-6 w-20 h-26 pl-10" src="./images/business.png" alt="">
+<section class="lg:mt-16">
+  <div class="lg:flex">
+    <div class="lg:border-r-2 border-zinc-500 border-opacity-20 border-b-2 p-12">
+      <img class="pb-6 w-26 h-20 pl-16" src="./images/business.png" alt="">
       <h2 class="text-2xl font-extrabold pb-6 pl-6">Business Law</h2>
       <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
       <i class="fa-solid fa-circle-arrow-right pl-16 pt-8 text-[#B68C5A]"></i>
     </div>
 
-    <div class="border-r-2 border-zinc-500 border-opacity-20 border-b-2 p-12 bg-gradient-to-t from-[#ffffff9d] to-[#F3F3F3]">
-      <img class="pb-6 w-20 h-26 pl-10" src="./images/criminal.png" alt="">
+    <div class="lg:border-r-2 border-zinc-500 border-opacity-20 border-b-2 p-12 bg-gradient-to-t from-[#ffffff9d] to-[#F3F3F3]">
+      <img class="pb-6 w-26 h-20 pl-16" src="./images/criminal.png" alt="">
       <h2 class="text-2xl font-extrabold pb-6 pl-6">Criminal Law</h2>
       <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
       <i class="fa-solid fa-circle-arrow-right pl-16 pt-8 text-[#B68C5A]"></i>
     </div>
 
     <div class="border-b-2 border-zinc-500 border-opacity-20 p-12">
-      <img class="pb-6 w-20 h-26 pl-10" src="./images/child.png" alt="">
+      <img class="pb-6 w-26 h-20 pl-16" src="./images/child.png" alt="">
       <h2 class="text-2xl font-extrabold pb-6 pl-6">Child Support</h2>
       <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour..</p>
       <i class="fa-solid fa-circle-arrow-right pl-16 pt-8 text-[#B68C5A]"></i>
     </div>
   </div>
 
-  <div class="flex">
-    <div class="border-r-2 border-zinc-500 border-opacity-20 p-12">
-      <img class="pb-6 w-20 h-26 pl-10" src="./images/education.png" alt="">
+  <div class="lg:flex">
+    <div class="lg:border-r-2 border-zinc-500 border-opacity-20 border-b-2 lg:border-b-0 p-12">
+      <img class="pb-6 w-26 h-20 pl-16" src="./images/education.png" alt="">
       <h2 class="text-2xl font-extrabold pb-6 pl-4">Education Law</h2>
       <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
       <i class="fa-solid fa-circle-arrow-right pl-16 pt-8 text-[#B68C5A]"></i>
     </div>
 
-    <div class="border-r-2 border-zinc-500 border-opacity-20 p-12">
-      <img class="pb-6 w-20 h-26 pl-10" src="./images/divorce.png" alt="">
+    <div class="lg:border-r-2 border-zinc-500 border-opacity-20 border-b-2 lg:border-b-0 p-12">
+      <img class="pb-6 w-26 h-20 pl-16" src="./images/divorce.png" alt="">
       <h2 class="text-2xl font-extrabold pb-6 pl-6">Divorce Law</h2>
       <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
       <i class="fa-solid fa-circle-arrow-right pl-16 pt-8 text-[#B68C5A]"></i>
     </div>
 
-    <div class="border-r-2 border-zinc-500 border-opacity-20 p-12">
+    <div class="border-b-2 border-zinc-500 border-opacity-20 lg:border-b-0 p-12">
       <img class="pb-6 w-20 h-26 pl-10" src="./images/tax.png" alt="">
       <h2 class="text-2xl font-extrabold pb-6 pl-6">Tax Law</h2>
       <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
@@ -133,54 +140,63 @@
   </div>
 </section>
 
-<div class="mt-28 text-center space-y-6"> 
-  <h2 class="text-4xl font-extrabold">What Our Client Say</h2>
- <p class="text-base font-normal pb-12 w-[900px] pl-48">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+<!-- claint says section -->
+
+<div class="mt-10 lg:mt-28 text-center space-y-6"> 
+  <h2 class="text-2xl lg:text-4xl font-extrabold">What Our Client Say</h2>
+ <p class="text-base font-normal pb-12 w-[350px] lg:w-[900px] lg:pl-48">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
 </div>
 <section class="relative">
 
 
 
-  <div class="carousel w-full">
+  <div class="carousel lg:w-full">
   
     <div id="slide1" class="carousel-item relative w-full">
       <img src="./images/banner.png" class="w-full" />
       <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-        <a href="#slide4" class="text-white pl-8">❮</a> 
-        <a href="#slide2" class="text-white pr-8">❯</a>
+        <a href="#slide4" class="text-white lg:pl-8">❮</a> 
+        <a href="#slide2" class="text-white lg:pr-8">❯</a>
       </div>
     </div> 
     <div id="slide2" class="carousel-item relative w-full">
       <img src="./images/slider-1.jpg" class="w-full" />
       <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-        <a href="#slide1" class="text-white pl-8">❮</a> 
-        <a href="#slide3" class="text-white pr-8">❯</a>
+        <a href="#slide1" class="text-white lg:pl-8">❮</a> 
+        <a href="#slide3" class="text-white lg:pr-8">❯</a>
       </div>
     </div> 
     <div id="slide3" class="carousel-item relative w-full">
       <img src="./images/slider-2.jpg" class="w-full" />
       <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-        <a href="#slide2" class="text-white pl-8">❮</a> 
-        <a href="#slide4" class="text-white pr-8">❯</a>
+        <a href="#slide2" class="text-white lg:pl-8">❮</a> 
+        <a href="#slide4" class="text-white lg:pr-8">❯</a>
       </div>
     </div> 
     <div id="slide4" class="carousel-item relative w-full">
       <img src="./images/slider-3.jpg" class="w-full" />
       <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-        <a href="#slide3" class="text-white pl-8">❮</a> 
-        <a href="#slide1" class="text-white pr-8">❯</a>
+        <a href="#slide3" class="text-white lg:pl-8">❮</a> 
+        <a href="#slide1" class="text-white lg:pr-8">❯</a>
       </div>
     </div>
   </div>
-  <div class="text-center absolute left-32 top-60 text-white">
-    <img class="pl-[350px]" src="./images/Ellipse 1.png" alt="">
-    <h2 class="text-2xl font-extrabold">
+  <div class="top-4 text-center absolute bottom-2  lg:bottom-4 lg:left-32 lg:top-60 text-white">
+    <img class="ml-40 lg:ml-0 lg:pl-[350px] w-14 h-8 lg:w-0 lg:h-0" src="./images/Ellipse 1.png" alt="">
+    <h2 class="lg:text-2xl font-extrabold">
       Awlad Hossain
     </h2>
-    <h6 class="text-base font-normal">UIX Designer</h6>
-    <p class="w-[800px]">
-      Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.
+    <h6 class="lg:text-base font-normal">UIX Designer</h6>
+    <p class="w-[350px] lg:w-[700px] px-10 font-thin lg:font-normal pr-4">
+      Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
     </p>
+  <div class="pt-8 pl-32 lg:pl-80">
+    <svg xmlns="http://www.w3.org/2000/svg" width="130" height="3" viewBox="0 0 130 3" fill="none">
+      <rect width="40" height="3" fill="#707070"/>
+      <rect x="45" width="40" height="3" fill="white"/>
+      <rect x="90" width="40" height="3" fill="#707070"/>
+    </svg>
+  </div>
   </div>
 </section>
 
@@ -189,8 +205,39 @@
     </main>
 
     <!-- footer section -->
-    <footer>
-
+    <footer class="footer p-10 bg-base-200 text-base-content">
+      <nav>
+        <header class="footer-title">Services</header> 
+        <a class="link link-hover">Branding</a>
+        <a class="link link-hover">Design</a>
+        <a class="link link-hover">Marketing</a>
+        <a class="link link-hover">Advertisement</a>
+      </nav> 
+      <nav>
+        <header class="footer-title">Company</header> 
+        <a class="link link-hover">About us</a>
+        <a class="link link-hover">Contact</a>
+        <a class="link link-hover">Jobs</a>
+        <a class="link link-hover">Press kit</a>
+      </nav> 
+      <nav>
+        <header class="footer-title">Legal</header> 
+        <a class="link link-hover">Terms of use</a>
+        <a class="link link-hover">Privacy policy</a>
+        <a class="link link-hover">Cookie policy</a>
+      </nav> 
+      <form>
+        <header class="footer-title">Newsletter</header> 
+        <fieldset class="form-control w-80">
+          <label class="label">
+            <span class="label-text">Enter your email address</span>
+          </label> 
+          <div class="join">
+            <input type="text" placeholder="username@site.com" class="input input-bordered join-item" /> 
+            <button class="btn btn-primary join-item">Subscribe</button>
+          </div>
+        </fieldset>
+      </form>
     </footer>
     
 </body>
