--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
       <!-- legal solution section -->
       <div class="min-h-screen rounded-xl mt-12 bg-no-repeat" style="background-image: url(./images/banner.png);">
-        <div class="hero-overlay bg-opacity-60"></div>
+      
         <div class="hero-content text-center text-neutral-content">
           <div class="mt-32">
             <h1 class="mb-5 text-3xl font-bold lg:text-5xl font-bold">We Provide Effective <br>
@@ -150,7 +150,7 @@
 
 
 
-  <div class="carousel lg:w-full">
+  <div class="carousel lg:w-full  lg:h-[500px] rounded-2xl">
   
     <div id="slide1" class="carousel-item relative w-full">
       <img src="./images/banner.png" class="w-full" />
@@ -181,16 +181,16 @@
       </div>
     </div>
   </div>
-  <div class="top-4 text-center absolute bottom-2  lg:bottom-4 lg:left-32 lg:top-60 text-white">
-    <img class="ml-40 lg:ml-0 lg:pl-[350px] w-14 h-8 lg:w-0 lg:h-0" src="./images/Ellipse 1.png" alt="">
-    <h2 class="lg:text-2xl font-extrabold">
+  <div class="top-6 text-center absolute bottom-2  lg:bottom-4 lg:left-32 lg:top-28 text-white">
+    <img class="pl-36 lg:pl-80 lg:pb-6 w-[200px] lg:w-[390px]" src="./images/Ellipse 1.png" alt="">
+    <h2 class="lg:text-2xl font-extrabold lg:pb-2">
       Awlad Hossain
     </h2>
-    <h6 class="lg:text-base font-normal">UIX Designer</h6>
+    <h6 class="lg:text-base font-normal lg:pb-4">UIX Designer</h6>
     <p class="w-[350px] lg:w-[700px] px-10 font-thin lg:font-normal pr-4">
       Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
     </p>
-  <div class="pt-8 pl-32 lg:pl-80">
+  <div class="pt-4 pl-32 lg:pl-80">
     <svg xmlns="http://www.w3.org/2000/svg" width="130" height="3" viewBox="0 0 130 3" fill="none">
       <rect width="40" height="3" fill="#707070"/>
       <rect x="45" width="40" height="3" fill="white"/>
@@ -200,12 +200,138 @@
   </div>
 </section>
 
+<!-- FAQ SECTION -->
+<section class="mt-20">
+<div class="text-center space-y-6">
+  <h2 class="text-4xl font-extrabold">Frequently Asked Any Questions</h2>
+  <p class="text-base font-normal text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered <br> alteration in some form, by injected humour.</p>
+</div>
+
+
+<div class="flex mt-16">
+  <div class="flex-1 space-y-6 gap-x-8">
+  <div class="collapse collapse-plus bg-base-200">
+    <input type="radio" name="my-accordion-3" checked="checked" /> 
+    <div class="collapse-title text-xl font-medium">
+     1. How variations are you available?
+    </div>
+    <div class="collapse-content"> 
+      <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+    </div>
+  </div>
+  <div class="collapse collapse-plus bg-base-200">
+    <input type="radio" name="my-accordion-3" /> 
+    <div class="collapse-title text-xl font-medium">
+     2. Are application fee waivers available?
+    </div>
+    <div class="collapse-content"> 
+      <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+    </div>
+  </div>
+  <div class="collapse collapse-plus bg-base-200">
+    <input type="radio" name="my-accordion-3" /> 
+    <div class="collapse-title text-xl font-medium">
+     3. Click to open this one and close others
+    </div>
+    <div class="collapse-content"> 
+      <p>There are many variations of passages of Lorem Ipsum available</p>
+    </div>
+  </div>
+  <div class="collapse collapse-plus bg-base-200">
+    <input type="radio" name="my-accordion-3" /> 
+    <div class="collapse-title text-xl font-medium">
+     4. Click to open this FAQ?
+    </div>
+    <div class="collapse-content"> 
+      <p>The majority have suffered <br> alteration in some form, by injected humour</p>
+    </div>
+  </div>
+</div>
+
+
+<div class="flex-1 pl-10">
+  <img class=" w-[500px] h-[400px]" src="./images/faq.png" alt="">
+</div>
+</div>
+
+
+
+</section>
+
+<!-- contact us section -->
+
+<section class="mt-20">
+  <div class="text-center space-y-6">
+    <h2 class="text-4xl font-extrabold">Contact With Us</h2>
+    <p class="text-base font-normal text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered <br> alteration in some form, by injected humour.</p>
+  </div>
+
+<div class="flex mt-16 gap-8">
+  <div class="">
+
+    <div class="flex">
+     <div class="bg-[#F3F3F3] w-64 h-64 text-center pt-12  border-r-2 border-b-2 border-[#CFCFCF] space-y-2">
+       <i class="fa-solid fa-location-dot"></i>
+       <h2 class="text-xl font-extrabold">Address</h2>
+       <p class="text-base font-normal text-[#707070]">A108 Adam Street,<br>
+         New York, NY 535022</p>
+     </div>
+     <div class="bg-[#F3F3F3] w-64 h-64 text-center pt-12 border-b-2 border-[#CFCFCF] space-y-2">
+       <i class="fa-solid fa-phone"></i>
+       <h2 class="text-xl font-extrabold">Call Us</h2>
+       <p class="text-base font-normal text-[#707070]">+88 01750 00 00 00 <br>
+         +88 01750 00 00 00</p>
+     </div>
+    </div>
+   
+    <div class="flex">
+     <div class="bg-[#F3F3F3] w-64 h-64 text-center pt-12 border-r-2 border-[#CFCFCF] space-y-2">
+       <i class="fa-solid fa-envelope"></i>
+       <h2 class="text-xl font-extrabold">Email Us</h2>
+       <p class="text-base font-normal text-[#707070]">info@gmail.com <br>
+         info@gmail.com</p>
+     </div>
+     <div class="bg-[#F3F3F3] w-64 h-64 text-center pt-12 space-y-2">
+       <i class="fa-solid fa-clock"></i>
+       <h2 class="text-xl font-extrabold">Working Hours</h2>
+       <p class="text-base font-normal text-[#707070]">Mon-Fri: 9AM to 5PM <br>
+         Sunday: 9AM to 1 PM</p>
+     </div>
+    </div>
+   
+   </div>
+   
+   
+   <div class="space-y-4">
+     <div>
+       <input type="text" placeholder="Your Name" class="input w-[500px] h-16 bg-[#F3F3F3]"/>
+     </div>
+     <div>
+       <input type="email" placeholder="Your Email" class="input  w-[500px] h-16 bg-[#F3F3F3]"/>
+     </div>
+     <div>
+       <input type="text" placeholder="Subject" class="input  w-[500px] h-16 bg-[#F3F3F3]"/>
+     </div>
+     <div>
+       <input type="text" placeholder="Your Message" class="input w-[500px] h-[190px] bg-[#F3F3F3]"/>
+     </div>
+     <div>
+       <button class="btn bg-[#B68C5A] text-white w-[500px] h-16">Secondary</button>
+     </div>
+   </div>
+   
+   
+</div>
+
+
+</section>
+
    
 
     </main>
 
     <!-- footer section -->
-    <footer class="footer p-10 bg-base-200 text-base-content">
+    <footer class="footer p-10 bg-base-200 text-base-content mt-32">
       <nav>
         <header class="footer-title">Services</header> 
         <a class="link link-hover">Branding</a>
