--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body class="container">
     <!-- header section -->
     <header class="max-w-5xl mx-auto">
-      <div class="navbar bg-base-100">
+      <div class="navbar bg-base-100 mt-8">
         <div class="navbar-start">
           <div class="dropdown">
             <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -49,7 +49,8 @@
             </ul>
           
           </div>
-          <a class="text-4xl font-extrabold">Justic</a>
+        
+          <img class="text-4xl font-extrabold text-black" src="./images/logo2.png" alt="">
         </div>
         <div class="navbar-center hidden lg:flex">
           <ul class="menu menu-horizontal px-1 gap-10">
@@ -203,12 +204,12 @@
 <!-- FAQ SECTION -->
 <section class="mt-20">
 <div class="text-center space-y-6">
-  <h2 class="text-4xl font-extrabold">Frequently Asked Any Questions</h2>
-  <p class="text-base font-normal text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered <br> alteration in some form, by injected humour.</p>
+  <h2 class=" text-2xl lg:text-4xl font-extrabold">Frequently Asked Any Questions</h2>
+  <p class="text-base font-normal text-[#707070] mx-2">There are many variations of passages of Lorem Ipsum available, but the majority have suffered <br> alteration in some form, by injected humour.</p>
 </div>
 
 
-<div class="flex mt-16">
+<div class="lg:flex mt-16 mx-2">
   <div class="flex-1 space-y-6 gap-x-8">
   <div class="collapse collapse-plus bg-base-200">
     <input type="radio" name="my-accordion-3" checked="checked" /> 
@@ -262,21 +263,21 @@
 
 <section class="mt-20">
   <div class="text-center space-y-6">
-    <h2 class="text-4xl font-extrabold">Contact With Us</h2>
-    <p class="text-base font-normal text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered <br> alteration in some form, by injected humour.</p>
+    <h2 class="text-2xl lg:text-4xl font-extrabold">Contact With Us</h2>
+    <p class="text-base font-normal text-[#707070] px-2">There are many variations of passages of Lorem Ipsum available, but the majority have suffered <br> alteration in some form, by injected humour.</p>
   </div>
 
-<div class="flex mt-16 gap-8">
-  <div class="">
+<div class="lg:flex mt-16 gap-8">
+  <div class="space-y-6 px-12 lg:px-0 lg:space-y-0">
 
-    <div class="flex">
-     <div class="bg-[#F3F3F3] w-64 h-64 text-center pt-12  border-r-2 border-b-2 border-[#CFCFCF] space-y-2">
+    <div class="lg:flex space-y-6 lg:space-y-0">
+     <div class="bg-[#F3F3F3] w-64 h-64 text-center pt-12  lg:border-r-2 lg:border-b-2 border-[#CFCFCF] space-y-2">
        <i class="fa-solid fa-location-dot"></i>
        <h2 class="text-xl font-extrabold">Address</h2>
        <p class="text-base font-normal text-[#707070]">A108 Adam Street,<br>
          New York, NY 535022</p>
      </div>
-     <div class="bg-[#F3F3F3] w-64 h-64 text-center pt-12 border-b-2 border-[#CFCFCF] space-y-2">
+     <div class="bg-[#F3F3F3] w-64 h-64 text-center pt-12 lg:border-b-2 border-[#CFCFCF] space-y-2">
        <i class="fa-solid fa-phone"></i>
        <h2 class="text-xl font-extrabold">Call Us</h2>
        <p class="text-base font-normal text-[#707070]">+88 01750 00 00 00 <br>
@@ -284,8 +285,8 @@
      </div>
     </div>
    
-    <div class="flex">
-     <div class="bg-[#F3F3F3] w-64 h-64 text-center pt-12 border-r-2 border-[#CFCFCF] space-y-2">
+    <div class="lg:flex space-y-6 lg:space-y-0">
+     <div class="bg-[#F3F3F3] w-64 h-64 text-center pt-12 lg:border-r-2 border-[#CFCFCF] space-y-2">
        <i class="fa-solid fa-envelope"></i>
        <h2 class="text-xl font-extrabold">Email Us</h2>
        <p class="text-base font-normal text-[#707070]">info@gmail.com <br>
@@ -302,21 +303,21 @@
    </div>
    
    
-   <div class="space-y-4">
+   <div class="space-y-4 mt-8 lg:mt-0 mx-4 lg:mx-0">
      <div>
-       <input type="text" placeholder="Your Name" class="input w-[500px] h-16 bg-[#F3F3F3]"/>
+       <input type="text" placeholder="Your Name" class="input w-[350px] lg:w-[500px] h-16 bg-[#F3F3F3]"/>
      </div>
      <div>
-       <input type="email" placeholder="Your Email" class="input  w-[500px] h-16 bg-[#F3F3F3]"/>
+       <input type="email" placeholder="Your Email" class="input  w-[350px] lg:w-[500px] h-16 bg-[#F3F3F3]"/>
      </div>
      <div>
-       <input type="text" placeholder="Subject" class="input  w-[500px] h-16 bg-[#F3F3F3]"/>
+       <input type="text" placeholder="Subject" class="input w-[350px] lg:w-[500px] h-16 bg-[#F3F3F3]"/>
      </div>
      <div>
-       <input type="text" placeholder="Your Message" class="input w-[500px] h-[190px] bg-[#F3F3F3]"/>
+       <input type="text" placeholder="Your Message" class="input w-[350px] lg:w-[500px] h-[190px] bg-[#F3F3F3]"/>
      </div>
      <div>
-       <button class="btn bg-[#B68C5A] text-white w-[500px] h-16">Secondary</button>
+       <button class="btn bg-[#B68C5A] text-white w-[350px] lg:w-[500px] h-16">Secondary</button>
      </div>
    </div>
    
@@ -331,36 +332,37 @@
     </main>
 
     <!-- footer section -->
-    <footer class="footer p-10 bg-base-200 text-base-content mt-32">
+    <footer class="footer bg-[#111] text-base-content mt-32 py-24 px-24 space-x-6">
       <nav>
-        <header class="footer-title">Services</header> 
-        <a class="link link-hover">Branding</a>
-        <a class="link link-hover">Design</a>
-        <a class="link link-hover">Marketing</a>
-        <a class="link link-hover">Advertisement</a>
+        <h2> <img src="./images/logo.png" alt="">Justic</h2>
+        <p class="text-base font-normal text-[#707070]">There are many variations of <br> passages of Lorem Ipsum available,<br> but the majority have suffered <br> alteration in some form,<br> by injected humour.</p>
       </nav> 
       <nav>
-        <header class="footer-title">Company</header> 
-        <a class="link link-hover">About us</a>
-        <a class="link link-hover">Contact</a>
-        <a class="link link-hover">Jobs</a>
-        <a class="link link-hover">Press kit</a>
+        <header class="text-xl font-extrabold text-white">Usefull Link</header> 
+        <a class="link link-hover text-base font-normal text-[#707070]">Homes</a>
+        <a class="link link-hover text-base font-normal text-[#707070]">About Us</a>
+        <a class="link link-hover text-base font-normal text-[#707070]">Cases</a>
+        <a class="link link-hover text-base font-normal text-[#707070]">Blog</a>
+        <a class="link link-hover text-base font-normal text-[#707070]">Contact Us</a>
       </nav> 
       <nav>
-        <header class="footer-title">Legal</header> 
-        <a class="link link-hover">Terms of use</a>
-        <a class="link link-hover">Privacy policy</a>
-        <a class="link link-hover">Cookie policy</a>
+        <header class="text-xl font-extrabold  text-white">Contact Now</header> 
+        <a class="link link-hover text-base font-normal text-[#707070]">555 4th 5t NW, Washington <br>
+          DC 20530, United States</a>
+        <a class="link link-hover text-base font-normal text-[#707070]">+88 01750 000 000 <br>
+          +88 01750 000 000</a>
+        <a class="link link-hover text-base font-normal text-[#707070]">info@gmail.com <br>
+          info@gmail.com</a>
       </nav> 
       <form>
-        <header class="footer-title">Newsletter</header> 
+        <header class="text-xl font-extrabold  text-white">Subscribe</header> 
         <fieldset class="form-control w-80">
           <label class="label">
-            <span class="label-text">Enter your email address</span>
+            <span class="text-base font-normal text-[#707070]">Subscribe for our latest & Articles. We Won’t Give You Spam Mails</span>
           </label> 
-          <div class="join">
-            <input type="text" placeholder="username@site.com" class="input input-bordered join-item" /> 
-            <button class="btn btn-primary join-item">Subscribe</button>
+          <div class="join mt-2">
+            <input type="text" placeholder="Email Address" class="input input-bordered join-item" /> 
+            <button class="btn bg-[#B68C5A]"><i class="fa-regular fa-paper-plane text-white"></i></button>
           </div>
         </fieldset>
       </form>
